Fixed some issues in Admin Dashboard and Enhanced for Mobile and Performance